@@ -183,7 +183,7 @@ public class CandidateListWriterExtendedXLS implements IWriter {
 			while (propNames.hasNext()) {
 				String propName = (String) propNames.next();
 				if (!labels.containsKey(propName)) {
-					labels.put(propName, new Integer(numberCells));
+					labels.put(propName, Integer.valueOf(numberCells));
 					sheet1.addCell(new Label(labels.get(propName)
 							+ columnWidthAdd, 0, propName, arial10format));
 					numberCells++;
